<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageInList"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/abc_vector_test" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Title"
                android:textColor="@color/black"
                android:text="title"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SubTitle"
                android:textColor="@color/black"
                android:layout_marginLeft="4dp"
                android:text="Sybtitle"
                android:textSize="17sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/Cena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/carkosztWynajmu"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mocSilnika"
            android:text="@string/carMocSilnika"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pojemnoscSilnika"
            android:text="@string/carPojemnoscSilnika"
            android:textSize="16sp"/>


    </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>